--- a/summit24preregistrationDynamic.css
+++ b/summit24preregistrationDynamic.css
@@ -1,8 +1,4 @@
-
-
-.banner-image img,
-.banner-image picture {
-
-    object-fit: scale-down !important;
+.event-name {
+    display: none !important;
 
 }
